# icsPhisher

./: README.md  agenda.txt  pyproject.toml  sample.ics
ics_spoofer/: cli.py  core.py
