[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ics-spoofer"
version = "0.1.0"
description = "CLI tool to generate ICS calendar files with spoofed attendees, statuses, and attachments"
authors = [{ name = "ICS Spoofer" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
ics-spoofer = "ics_spoofer.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ics_spoofer*"]
exclude = []